# lh-lectures

./: README.md  lh-lectures.cabal
.github/workflows/: build.yml
src/: Lecture_01_RefinementTypes.lhs  Lecture_02_DataTypes.lhs  Lecture_03_Sortedness.lhs  Lecture_04_Termination.lhs  Lecture_05_ProofsPrograms.lhs  Lecture_06_StructuralInduction.lhs  Lecture_07_CaseStudyMapReduce.lhs  Lecture_08_NaturalDeduction.lhs  Lecture_09_DataPropositions.lhs  Task1.hs  Task2.hs
src/Language/Haskell/Liquid/: ProofCombinators.hs
